Fix for odd spacing on certain pages
This is a temporary fix until proper views can be made for the affected
screens. User and create game screen had no edge padding (and header
remains centered even though it should be left aligned).

--- a/ArmedCards/ArmedCards.Web/Content/Home.css
+++ b/ArmedCards/ArmedCards.Web/Content/Home.css
@@ -2949,6 +2949,12 @@ body #toast-container > .toast-info
 	{
 		margin: 0 10px;
 	}
+
+	.radHeader + .user,
+	.createGame
+	{
+		margin: 0 8px;
+	}
 }
 
 @media screen and (max-width: 550px)
